# bsd-wsjf

./: .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: CLAUDE.md
backend/: .env.example  .env.test  .pre-commit-config.yaml  Dockerfile  pyproject.toml  pytest.ini  run_tests.py  wsjf.db.wal
backend/app/: main.py
backend/app/api/: endpoints.py  pi_endpoints.py
backend/app/core/: config.py  database.py  database_factory.py  test_config.py  test_database.py
backend/app/models/: __init__.py  program_increment.py  status.py  wsjf_item.py
backend/app/services/: __init__.py  excel_service.py  pi_service.py  wsjf_service.py
backend/tests/: conftest.py  test_api.py  test_api_endpoints.py  test_database_factory.py  test_pi_service.py  test_wsjf_models.py  test_wsjf_service.py
docs/: DEVELOPMENT.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ExportButton.tsx  InlineEdit.tsx  PIForm.tsx  PIManagementPage.tsx  PISelector.tsx  ScoreCalculator.tsx  SimplePISelector.tsx  StatusBadge.tsx  TabNavigation.tsx  Tooltip.tsx  WSJFForm.tsx  WSJFTable.tsx  WSJFValueEdit.tsx  WSJFValuesToolip.tsx  index.ts
frontend/src/hooks/: useWSJF.ts
frontend/src/types/: wsjf.ts
